Add homepage copy.

--- a/sass/home.scss
+++ b/sass/home.scss
@@ -9,7 +9,7 @@
     font-size: 80px;
     text-transform: uppercase;
     color: $white;
-    animation-delay: 2s;
+    animation-delay: 1s;
   }
 
   .home-subheading {
@@ -19,7 +19,7 @@
     font-weight: 700;
     color: $white;
     text-transform: uppercase;
-    animation-delay: 2s;
+    animation-delay: 1.5s;
   }
 }
 
@@ -27,4 +27,19 @@
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+.copy-container {
+    max-width: 650px;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 118px;
+
+    h3 {
+        margin-bottom: 36px;
+    }
+
+    strong {
+            color: $purple;
+        }
 }
