--- a/sass/css.css
+++ b/sass/css.css
@@ -569,7 +569,7 @@ h3 {
   font-family: proxima-nova, sans-serif;
   font-weight: 500;
   font-style: normal;
-  font-size: 24px;
+  font-size: 30px;
   color: #3c2a66;
 }
 
@@ -586,7 +586,7 @@ p {
   font-family: proxima-nova, sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 22px;
   color: #999999;
 }
@@ -836,7 +836,7 @@ hr {
 }
 
 .welcome {
-  width: 55%;
+  width: 56%;
 }
 
 .enrollment {
@@ -945,7 +945,7 @@ hr {
   font-size: 80px;
   text-transform: uppercase;
   color: #fff;
-  animation-delay: 2s;
+  animation-delay: 1s;
 }
 .wrapper .home-subheading {
   font-size: 40px;
@@ -954,12 +954,26 @@ hr {
   font-weight: 700;
   color: #fff;
   text-transform: uppercase;
+  animation-delay: 1.5s;
 }
 
 .wrapper .wrapper__video {
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+.copy-container {
+  max-width: 650px;
+  margin: 0 auto;
+  text-align: center;
+  margin-top: 118px;
+}
+.copy-container h3 {
+  margin-bottom: 36px;
+}
+.copy-container strong {
+  color: #3c2a66;
 }
 
 body {
