--- a/sass/home.scss
+++ b/sass/home.scss
@@ -1,45 +1,112 @@
 .wrapper{
-  width: 100%;
-  height: 75vh;
-  overflow: hidden;
+    width: 100%;
+    height: 75vh;
+    overflow: hidden;
 
-  .home-heading {
-    position: absolute;
-    margin-top: -430px;
-    font-size: 80px;
-    text-transform: uppercase;
-    color: $white;
-    animation-delay: 1s;
-  }
+    .home-heading {
+        position: absolute;
+        margin-top: -430px;
+        font-size: 80px;
+        text-transform: uppercase;
+        color: $white;
+        animation-delay: 1s;
+    }
 
-  .home-subheading {
-    font-size: 40px;
-    position: absolute;
-    margin-top: -350px;
-    font-weight: 700;
-    color: $white;
-    text-transform: uppercase;
-    animation-delay: 1.5s;
-  }
+    .home-subheading {
+        font-size: 40px;
+        position: absolute;
+        margin-top: -350px;
+        font-weight: 700;
+        color: $white;
+        text-transform: uppercase;
+        animation-delay: 1.5s;
+    }
 }
 
 .wrapper .wrapper__video{
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
-.copy-container {
-    max-width: 650px;
-    margin: 0 auto;
-    text-align: center;
-    margin-top: 118px;
+main {
+    .main-container {
+        max-width: 650px;
+        margin: 0 auto;
+        text-align: center;
+        margin-top: 118px;
 
-    h3 {
-        margin-bottom: 36px;
-    }
+        h3 {
+            margin-bottom: 36px;
+        }
 
-    strong {
+        strong {
             color: $purple;
         }
+    }
+
+    .homepage-login-btn {
+        @extend %purple-btn;
+        max-width: 370px;
+        a {
+            color: $white;
+            text-decoration: none;
+        }
+    }
+
+    .destination-btn {
+        @extend %cta-btn;
+        background-image: url('../images/destination-btn.jpg');
+        width: 28%;
+       h3 {
+        color: $white;
+       }
+    }
+
+    .mp-btn {
+        @extend %cta-btn;
+        background-image: url('../images/mp-btn.jpg');
+        width: 28%;
+       h3 {
+        color: $white;
+       }
+    }
+
+    .buttons {
+        justify-content: space-around;
+    }
 }
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+    .wrapper{
+        .home-heading {
+            font-size: 60px;
+        }
+    }
+
+    main {
+    margin: 15px;
+        .main-container {
+            margin-top: 50px;
+        }
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 601px) 
+and (max-width: 768px) {
+    main {
+    margin: 15px;
+        .main-container {
+            margin-top: 50px;
+        }
+    }
+}
+
+
+
+
+
+
