--- a/sass/login.scss
+++ b/sass/login.scss
@@ -1,3 +1,5 @@
+
+
 .login-bod {
     background-color: $purple;
 }
@@ -44,19 +46,7 @@
     }
 
     .login-btn {
-        background-color: $purple;
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
-        padding: 10px;
-        width: 97%;
-        font-size: 20px;
-        font-family: proxima-nova, sans-serif;
-        color: $white;
-        border-radius: 5px;
-        margin-top: 30px;
-        cursor: pointer;
-
+        @extend %purple-btn;
         a {
             color: $white;
             text-decoration: none;
