Change div class.

--- a/sass/home.scss
+++ b/sass/home.scss
@@ -73,7 +73,7 @@ main {
     }
 
 
-    .2019-btn {
+    .lastyr-btn {
         @extend %cta-btn;
         background-image: url('../images/mp-btn.jpg');
         width: 28%;
