--- a/sass/css.css
+++ b/sass/css.css
@@ -20,12 +20,20 @@ main .homepage-login-btn, .login-container .login-btn {
 }
 
 main .lastyr-btn, main .mp-btn, main .destination-btn {
-  padding: 50px;
+  padding: 30px;
   background-color: #3c2a66;
   border-radius: 10px;
   text-align: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+main .lastyr-btn a, main .mp-btn a, main .destination-btn a {
+  color: #fff;
+  text-decoration: none;
+}
+main .lastyr-btn :hover, main .mp-btn :hover, main .destination-btn :hover {
+  border-color: #fff;
+  border-width: 5px;
 }
 
 .plane {
@@ -854,6 +862,7 @@ main .main-container {
   margin: 0 auto;
   text-align: center;
   margin-top: 118px;
+  margin-bottom: 80px;
 }
 main .main-container h3 {
   margin-bottom: 36px;
@@ -870,27 +879,18 @@ main .homepage-login-btn a {
 }
 main .destination-btn {
   background-image: url("../images/destination-btn.jpg");
-  width: 28%;
-}
-main .destination-btn h3 {
-  color: #fff;
+  width: 26%;
 }
 main .mp-btn {
   background-image: url("../images/mp-btn.jpg");
-  width: 28%;
-}
-main .mp-btn h3 {
-  color: #fff;
+  width: 26%;
 }
 main .lastyr-btn {
-  background-image: url("../images/mp-btn.jpg");
-  width: 28%;
+  background-image: url("../images/2019-btn.jpg");
+  width: 26%;
 }
-main .lastyr-btn h3 {
-  color: #fff;
-}
-main .buttons {
-  justify-content: space-around;
+main .buttons .flex {
+  justify-content: space-between;
 }
 
 /* Extra small devices (phones, 600px and down) */
