--- a/sass/extends.scss
+++ b/sass/extends.scss
@@ -20,10 +20,20 @@
 }
 
 %cta-btn {
-	padding: 50px;
+	padding: 30px;
 	background-color: $purple;
 	border-radius: 10px;
 	text-align: center;
 	background-repeat: no-repeat;
     background-size: cover;
+
+     a {
+     	color: $white;
+        text-decoration: none;
+     }
+
+    :hover {
+     	border-color: $white;
+     	border-width: 5px;
+     }
 }
