--- a/sass/home.scss
+++ b/sass/home.scss
@@ -1,3 +1,5 @@
+
+
 .wrapper{
     width: 100%;
     height: 75vh;
@@ -35,6 +37,7 @@ main {
         margin: 0 auto;
         text-align: center;
         margin-top: 118px;
+        margin-bottom: 80px;
 
         h3 {
             margin-bottom: 36px;
@@ -57,33 +60,27 @@ main {
     .destination-btn {
         @extend %cta-btn;
         background-image: url('../images/destination-btn.jpg');
-        width: 28%;
-       h3 {
-        color: $white;
-       }
+        width: 26%;
     }
 
     .mp-btn {
         @extend %cta-btn;
         background-image: url('../images/mp-btn.jpg');
-        width: 28%;
-       h3 {
-        color: $white;
-       }
+        width: 26%;
     }
 
 
     .lastyr-btn {
         @extend %cta-btn;
-        background-image: url('../images/mp-btn.jpg');
-        width: 28%;
-       h3 {
-        color: $white;
-       }
+        background-image: url('../images/2019-btn.jpg');
+        width: 26%;
     }
 
     .buttons {
-        justify-content: space-around;
+        .flex {
+            justify-content: space-between;
+        }
+        
     }
 }
 
