--- a/sass/css.css
+++ b/sass/css.css
@@ -4,7 +4,6 @@ main .homepage-login-btn, .login-container .login-btn {
   margin-right: auto;
   display: block;
   padding: 10px;
-  width: 97%;
   font-size: 20px;
   font-family: proxima-nova, sans-serif;
   color: #fff;
@@ -408,6 +407,7 @@ header {
   width: 100%;
   background-color: #3c2a66;
   height: 90px;
+  transition: top 0.2s ease-in-out;
 }
 header .header-logo {
   height: 70px;
@@ -858,7 +858,7 @@ hr {
 }
 
 main .main-container {
-  max-width: 650px;
+  max-width: 760px;
   margin: 0 auto;
   text-align: center;
   margin-top: 118px;
@@ -893,6 +893,29 @@ main .buttons .flex {
   justify-content: space-between;
 }
 
+.social-med {
+  display: flex;
+  justify-content: space-around;
+  margin: 0 auto;
+  max-width: 320px;
+  padding: 130px 0 57px;
+}
+.social-med img {
+  height: 25px;
+}
+
+footer .purple-band {
+  background-color: #3c2a66;
+}
+footer .purple-band p {
+  padding: 20px 0;
+  color: #fff;
+}
+footer .purple-band a {
+  color: #fff;
+  text-decoration: none;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   .wrapper .home-heading {
@@ -904,6 +927,15 @@ main .buttons .flex {
   }
   main .main-container {
     margin-top: 50px;
+    margin-bottom: 30px;
+  }
+  main .destination-btn, main .mp-btn, main .lastyr-btn {
+    width: 100%;
+    margin-top: 30px;
+  }
+
+  .social-med {
+    padding: 50px 0;
   }
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -913,6 +945,24 @@ main .buttons .flex {
   }
   main .main-container {
     margin-top: 50px;
+    margin-bottom: 30px;
+  }
+  main .destination-btn, main .mp-btn, main .lastyr-btn {
+    width: 100%;
+    margin-top: 30px;
+  }
+  main .social-med {
+    padding: 50px 0;
+  }
+}
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  main .destination-btn, main .mp-btn, main .lastyr-btn {
+    width: 100%;
+    margin-top: 30px;
+  }
+  main .social-med {
+    padding: 50px 0;
   }
 }
 .purple {
