--- a/sass/home.scss
+++ b/sass/home.scss
@@ -33,7 +33,7 @@
 
 main {
     .main-container {
-        max-width: 680px;
+        max-width: 760px;
         margin: 0 auto;
         text-align: center;
         margin-top: 118px;
@@ -80,7 +80,32 @@ main {
         .flex {
             justify-content: space-between;
         }
-        
+    }
+}
+
+.social-med {
+    display: flex;
+    justify-content: space-around;
+    margin: 0 auto;
+    max-width: 320px;
+    padding: 130px 0 57px;
+    img {
+        height: 25px;
+    }
+}
+
+footer {
+    .purple-band {
+        background-color: $purple;
+        p {
+            padding: 20px 0;
+            color: $white;
+        }
+
+        a {
+            color: $white;
+            text-decoration: none;
+        }
     }
 }
 
@@ -97,7 +122,17 @@ main {
     margin: 15px;
         .main-container {
             margin-top: 50px;
+            margin-bottom: 30px;
         }
+
+        .destination-btn, .mp-btn, .lastyr-btn{
+            width: 100%;
+            margin-top: 30px;
+        }
+    }
+
+    .social-med {
+        padding: 50px 0;
     }
 }
 
@@ -108,11 +143,34 @@ and (max-width: 768px) {
     margin: 15px;
         .main-container {
             margin-top: 50px;
+            margin-bottom: 30px;
+        }
+
+        .destination-btn, .mp-btn, .lastyr-btn{
+            width: 100%;
+            margin-top: 30px;
+        }
+
+        .social-med {
+            padding: 50px 0;
         }
     }
 }
 
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px)
+and (max-width: 991px) {
+    main {
+        .destination-btn, .mp-btn, .lastyr-btn{
+            width: 100%;
+            margin-top: 30px;
+        }
 
+        .social-med {
+            padding: 50px 0;
+        }
+    }
+}
 
 
 
