--- a/sass/extends.scss
+++ b/sass/extends.scss
@@ -10,12 +10,18 @@
 	border-radius: 5px;
 	margin-top: 30px;
 	cursor: pointer;
+	width: 100%;
 }
 
 %section {
     background-color: $white;
     border-radius: 10px;
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.05);
+}
+
+
+%padding {
+    padding: 20px;
 }
 
 %cta-btn {
