--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -40,6 +40,10 @@
             transition: 0.4s;
             color: $fontgrey;
           }
+
+          &:active {
+            color: $fontgrey;
+          }
       }
     }
 
