--- a/sass/performance.scss
+++ b/sass/performance.scss
@@ -110,6 +110,19 @@ hr {
     .flex {
         flex-wrap: wrap;
     }
+
+    .welcome {
+        order: 1;
+    }
+
+    .points {
+        order: 2;
+    }
+
+    .enrollment {
+        order: 3;
+    }
+
     .welcome, .enrollment {
         width: 100%;
         margin-bottom: 20px;
