--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4,11 +4,11 @@
 @import'pin';
 @import'nav';
 @import'fonts';
-
 @import'login';
 @import'performance';
 @import'home';
 @import'landing';
+@import'footer';
 
 body {
     background-color: $bggrey;
