--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -16,6 +16,10 @@
         .flex {
           justify-content: space-between;
         }
+
+        .nav {
+          display: none;
+        }
     }
 
     .nav ul {
