--- a/sass/home.scss
+++ b/sass/home.scss
@@ -42,6 +42,7 @@ main {
             @extend %purple-btn;
             max-width: 50%;
             margin-left: 0;
+            text-align: center;
         }
     }
 }
