--- a/sass/home.scss
+++ b/sass/home.scss
@@ -1,15 +1,26 @@
 .wrapper{
     width: 100%;
-    height: 75vh;
+    height: 65vh;
     overflow: hidden;
 
-    .home-heading {
+    .page-heading {
         position: absolute;
-        margin-top: -430px;
-        font-size: 80px;
-        text-transform: uppercase;
-        color: $white;
-        animation-delay: 1s;
+        margin-top: 300px;
+        
+        h1 {
+            font-size: 80px;
+            text-transform: uppercase;
+            color: $white;
+            animation-delay: 1s;
+        }
+
+        h2 {
+            font-size: 40px;
+            font-weight: 700;
+            color: $white;
+            text-transform: uppercase;
+            animation-delay: 1.5s;
+        }
     }
 
     .home-subheading {
@@ -51,6 +62,8 @@ main {
     }
 
     .home-cta-btns {
+        margin-top: 24px;
+        width: 369px;
         a {
             text-decoration: none;
         }
@@ -58,8 +71,9 @@ main {
 
     .home-cta {
         @extend %section;
-        padding: 20px;
-        width: 369px;
+        margin-top: 24px;
+        padding: 10px;
+        text-align: left;
         i {
             color: $purple;
         }
@@ -81,9 +95,27 @@ main {
 @media only screen and (max-width: 600px) {
 
     .wrapper{
-        .home-heading {
-            font-size: 60px;
+        height: 50vh;
+
+        .page-heading {
+            margin-top: 200px;
+            h1 {
+                font-size: 60px;
+            }
         }
+    }
+
+    main {
+        .home-content {
+            .home-content-btn {
+                margin-left: auto;
+            }
+        }
+
+        .home-cta-btns {
+            width: 100%;
+        }
+
     }
 
     .social-med {
@@ -95,12 +127,34 @@ main {
 @media only screen and (min-width: 601px) 
 and (max-width: 768px) {
 
+    .wrapper{
+        height: 50vh;
+        .page-heading {
+            margin-top: 200px;
+        }
+    }
+
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px)
 and (max-width: 991px) {
 
+    .wrapper{
+        height: 50vh;
+        .page-heading {
+            margin-top: 200px;
+        }
+    }
+
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 992px)
+and (max-width: 1200px) {
+    .flex {
+        flex-wrap: wrap;
+    }
 }
 
 
