--- a/sass/home.scss
+++ b/sass/home.scss
@@ -1,44 +1,3 @@
-.wrapper{
-    width: 100%;
-    height: 65vh;
-    overflow: hidden;
-
-    .page-heading {
-        position: absolute;
-        margin-top: 300px;
-        
-        h1 {
-            font-size: 80px;
-            text-transform: uppercase;
-            color: $white;
-            animation-delay: 1s;
-        }
-
-        h2 {
-            font-size: 40px;
-            font-weight: 700;
-            color: $white;
-            text-transform: uppercase;
-            animation-delay: 1.5s;
-        }
-    }
-
-    .home-subheading {
-        font-size: 40px;
-        position: absolute;
-        margin-top: -350px;
-        font-weight: 700;
-        color: $white;
-        text-transform: uppercase;
-        animation-delay: 1.5s;
-    }
-}
-
-.wrapper .wrapper__video{
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-}
 
 main {
     margin-top: 111px;
@@ -106,7 +65,7 @@ main {
     .wrapper{
         height: 50vh;
 
-        .page-heading {
+        .home-heading {
             margin-top: 200px;
             h1 {
                 font-size: 60px;
@@ -138,7 +97,7 @@ and (max-width: 768px) {
 
     .wrapper{
         height: 50vh;
-        .page-heading {
+        .home-heading {
             margin-top: 200px;
         }
     }
@@ -151,7 +110,7 @@ and (max-width: 991px) {
 
     .wrapper{
         height: 50vh;
-        .page-heading {
+        .home-heading {
             margin-top: 200px;
         }
     }
