--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -8,6 +8,7 @@
 @import'performance';
 @import'home';
 @import'landing';
+@import'destination';
 @import'footer';
 
 body {
@@ -23,4 +24,69 @@ body {
 
 .flex {
     display: flex;
+}
+
+.wrapper{
+    width: 100%;
+    height: 65vh;
+
+    .home-heading {
+        position: absolute;
+        margin-top: 300px;
+        
+        h1 {
+            font-size: 80px;
+            text-transform: uppercase;
+            color: $white;
+            animation-delay: 1s;
+        }
+
+        h2 {
+            font-size: 40px;
+            font-weight: 700;
+            color: $white;
+            text-transform: uppercase;
+            animation-delay: 1.5s;
+        }
+    }
+
+    .page-heading {
+        position: absolute;
+        margin-top: 300px;
+        margin-left: auto;
+        margin-right: auto;
+        left: 0;
+        right: 0;
+
+        h1 {
+            font-size: 53px;
+            text-transform: uppercase;
+            color: $white;
+            animation-delay: 1s;
+            text-align: center;
+        }
+
+        h2 {
+            font-size: 24px;
+            font-weight: 700;
+            color: $white;
+            text-transform: uppercase;
+            animation-delay: 1.5s;
+            text-align: center;
+        }
+    }
+}
+
+.wrapper .wrapper__video{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+}
+
+.central-content {
+	text-align: center;
+	max-width: 770px;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
 }
