--- a/sass/destination.scss
+++ b/sass/destination.scss
@@ -1,10 +1,44 @@
+
 .vegas-facts {
     @extend %section;
-    padding: 15px;
+    padding: 20px;
     margin-top: 91px;
     text-align: center;
 
     h3 {
-        padding-top: 48px;
+        padding-top: 28px;
+    }
+
+    .vegas-fact {
+        margin-top: 54px;
+        padding: 20px;
+        text-align: center;
+        i {
+            color: $purple;
+        }
+        h3 {
+            font-size: 20px;
+        }
+    }
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+    .wrapper{
+        height: 50vh;
+
+        .page-heading {
+            margin-top: 200px;
+            h1 {
+                font-size: 60px;
+            }
+        }
+    }
+
+    .vegas-facts {
+        .vegas-fact {
+            width: 100%;
+        }
     }
 }
