--- a/sass/css.css
+++ b/sass/css.css
@@ -1175,6 +1175,11 @@ body {
   width: 100%;
   height: 100%;
 }
+.wrapper .wrapper__image {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
 
 .central-content {
   text-align: center;
