--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -77,16 +77,25 @@ body {
     }
 }
 
-.wrapper .wrapper__video{
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
+.wrapper {
+    .wrapper__video {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
+
+    .wrapper__image {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    }
 }
 
+
 .central-content {
-	text-align: center;
-	max-width: 770px;
-	margin-left: auto;
-	margin-right: auto;
-	display: block;
+    text-align: center;
+    max-width: 770px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
