--- a/sass/home.scss
+++ b/sass/home.scss
@@ -38,8 +38,8 @@ main {
         padding: 10px;
         text-align: left;
 
-        .flex {
-
+        h3 {
+            font-size: 25px;
         }
 
         i {
