--- a/sass/home.scss
+++ b/sass/home.scss
@@ -30,6 +30,10 @@ main {
         a {
             text-decoration: none;
         }
+
+        p {
+            margin-top: 20px;
+        }
     }
 
     .home-cta {
