--- a/sass/css.css
+++ b/sass/css.css
@@ -1079,6 +1079,7 @@ main .home-cta i {
   margin-top: 54px;
   padding: 20px;
   text-align: center;
+  max-width: 25%;
 }
 .vegas-facts .vegas-fact i {
   color: #3c2a66;
@@ -1100,7 +1101,10 @@ main .home-cta i {
   }
 
   .vegas-facts .vegas-fact {
-    width: 100%;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
   }
 }
 footer .purple-band {
