--- a/sass/destination.scss
+++ b/sass/destination.scss
@@ -13,6 +13,7 @@
         margin-top: 54px;
         padding: 20px;
         text-align: center;
+        max-width: 25%;
         i {
             color: $purple;
         }
@@ -38,7 +39,10 @@
 
     .vegas-facts {
         .vegas-fact {
-            width: 100%;
+            max-width: 100%;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
         }
     }
 }
