--- a/sass/css.css
+++ b/sass/css.css
@@ -1133,6 +1133,11 @@ main .home-cta i {
   font-size: 16px;
   font-family: proxima-nova, sans-serif;
 }
+.contact-form .submit-btn {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
 .contact-form .submit-btn a {
   color: #fff;
   text-decoration: none;
